cluster/apps/teddit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teddit
  namespace: teddit
spec:
  selector:
    app: teddit
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
